# Crypto_ML_Predictor

./: README.md  quix.yaml
docker-compose/: Makefile  backfill_pipeline.yml  feature_pipeline.yml
services/: credentials.env
services/features_dashboard/: Makefile  README.md  pyproject.toml  setup_config.sh
services/kafka_to_feature_store/: .sample.env  Makefile  app.yaml  historical.env  live.env  pyproject.toml  setup_historical_config.sh  setup_live_config.sh
services/price_predictor/: Makefile  README.md  app.yaml  pyproject.toml
services/price_predictor/notebooks/: training.ipynb
services/price_predictor/src/: api.py  baseline_model.py  data_preprocessing.py  feature_engineering.py  model_factory.py  predictor.py  training.py  utils.py
services/price_predictor/ta-lib/: Makefile  config.status  libtool
services/price_predictor/ta-lib/src/: Makefile
services/price_predictor/ta-lib/src/.libs/: libta_lib.so.0.0.0
services/price_predictor/ta-lib/src/ta_abstract/: Makefile
services/price_predictor/ta-lib/src/ta_common/: Makefile
services/price_predictor/ta-lib/src/ta_func/: Makefile
services/price_predictor/ta-lib/src/tools/: Makefile
services/price_predictor/ta-lib/src/tools/gen_code/: Makefile  gen_code
services/price_predictor/ta-lib/src/tools/ta_regtest/: Makefile  ta_regtest
services/price_predictor/ta-lib/src/tools/ta_regtest/.libs/: ta_regtest
services/price_predictor/tools/tools/: ohlc_data_reader.py
services/trade_producer/: Dockerfile  Makefile  README.md  app.yaml  historical.env  (+3 more)
tools/: README.md  pyproject.toml
(+22 files in other folders)
