[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Paulescu <plabartabajo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
tools = {path = "../../tools", develop = true}
loguru = "^0.7.2"
scikit-learn = "^1.5.0"
xgboost = "^2.1.0"
ta-lib = "^0.4.32"
comet-ml = "^3.43.2"
matplotlib = "^3.9.1"
flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
